spacing and titles fixed

--- a/distros.html
+++ b/distros.html
@@ -22,7 +22,7 @@
 
   <!-- Main content -->
   <main class="max-w-3xl mx-auto mt-10 px-4">
-    <h1 class="text-3xl font-bold text-emerald-400 mb-6">Popular Beginner-Friendly Distros</h1>
+    <h1 class="text-3xl font-bold text-emerald-400 mb-6 text-center">Popular Beginner-Friendly Distros</h1>
 
     <div class="grid sm:grid-cols-1 gap-8">
 
