--- a/personalisation.html
+++ b/personalisation.html
@@ -28,7 +28,7 @@
 
     <!-- Page intro -->
     <section class="mb-10">
-      <h1 class="text-3xl font-bold text-emerald-400">Desktop Personalisation</h1>
+      <h1 class="text-3xl font-bold text-emerald-400 text-center">Desktop Personalisation</h1>
       <p class="text-gray-300 leading-relaxed mt-3">
         Linux gives you the freedom to change almost everything about your desktop — from icons and animations 
         to panels and shortcuts. Here are four popular environments so you can choose and edit your own.
@@ -36,7 +36,7 @@
     </section>
 
     <!-- HYPRLAND -->
-    <section id="hyprland" class="mb-12 bg-gray-800 rounded-xl shadow overflow-hidden">
+    <section id="hyprland" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
       <img src="images/hyprland.jpg" 
            alt="Hyprland desktop example" 
            class="w-full h-64 object-contain bg-gray-900">
@@ -51,7 +51,7 @@
     </section>
 
     <!-- KDE PLASMA -->
-    <section id="kde" class="mb-12 bg-gray-800 rounded-xl shadow overflow-hidden">
+    <section id="kde" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
       <img src="images/kde.png" 
            alt="KDE Plasma desktop example" 
            class="w-full h-64 object-contain bg-gray-900">
@@ -66,7 +66,7 @@
     </section>
 
     <!-- CINNAMON -->
-    <section id="cinnamon" class="mb-12 bg-gray-800 rounded-xl shadow overflow-hidden">
+    <section id="cinnamon" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
       <img src="images/cinnamon.png" 
            alt="Cinnamon desktop example" 
            class="w-full h-64 object-contain bg-gray-900">
@@ -79,7 +79,7 @@
         </p>
       </div>
     </section>
-    <section id="gnome" class="mb-12 bg-gray-800 rounded-xl shadow overflow-hidden">
+    <section id="gnome" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
       <img src="images/gnome.jpg" 
            alt="Gnome desktop example" 
            class="w-full h-64 object-contain bg-gray-900">
