--- a/personalisation.html
+++ b/personalisation.html
@@ -37,9 +37,11 @@
 
     <!-- HYPRLAND -->
     <section id="hyprland" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
-      <img src="images/hyprland.jpg" 
-           alt="Hyprland desktop example" 
-           class="w-full h-64 object-contain bg-gray-900">
+      <div class="bg-gray-900 py-4"> <!-- little fix following advice-->
+        <img src="images/hyprland.jpg" 
+             alt="Hyprland desktop example" 
+             class="w-full h-64 object-contain">
+      </div>
       <div class="p-6">
         <h2 class="text-2xl font-semibold text-sky-400 mb-2">Hyprland</h2>
         <p class="text-gray-300 leading-relaxed">
@@ -52,9 +54,11 @@
 
     <!-- KDE PLASMA -->
     <section id="kde" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
-      <img src="images/kde.png" 
-           alt="KDE Plasma desktop example" 
-           class="w-full h-64 object-contain bg-gray-900">
+      <div class="bg-gray-900 py-4">
+        <img src="images/kde.png" 
+             alt="KDE Plasma desktop example" 
+             class="w-full h-64 object-contain">
+      </div>
       <div class="p-6">
         <h2 class="text-2xl font-semibold text-blue-400 mb-2">KDE Plasma</h2>
         <p class="text-gray-300 leading-relaxed">
@@ -67,9 +71,11 @@
 
     <!-- CINNAMON -->
     <section id="cinnamon" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
-      <img src="images/cinnamon.png" 
-           alt="Cinnamon desktop example" 
-           class="w-full h-64 object-contain bg-gray-900">
+      <div class="bg-gray-900 py-4">
+        <img src="images/cinnamon.png" 
+             alt="Cinnamon desktop example" 
+             class="w-full h-64 object-contain">
+      </div>
       <div class="p-6">
         <h2 class="text-2xl font-semibold text-green-400 mb-2">Cinnamon</h2>
         <p class="text-gray-300 leading-relaxed">
@@ -80,9 +86,11 @@
       </div>
     </section>
     <section id="gnome" class="mb-0 bg-gray-800 rounded-xl shadow overflow-hidden">
-      <img src="images/gnome.jpg" 
-           alt="Gnome desktop example" 
-           class="w-full h-64 object-contain bg-gray-900">
+      <div class="bg-gray-900 py-4">
+        <img src="images/gnome.jpg" 
+             alt="Gnome desktop example" 
+             class="w-full h-64 object-contain">
+      </div>
       <div class="p-6">
         <h2 class="text-2xl font-semibold text-green-400 mb-2">Gnome</h2>
         <p class="text-gray-300 leading-relaxed">
